# src/server/db.ts
@@ -1,4 +1,5 @@
 import mongodb = require('mongodb')
+import turf = require('@turf/turf')
 
 namespace Database {
 
@@ -12,9 +13,21 @@ namespace Database {
         password: string
     }
 
+    export interface Message {
+        text:string,
+        category: string
+    }
+    
+    export interface MessageFeature {
+        _id: mongodb.ObjectID
+        feature: turf.helpers.Feature<turf.helpers.Point, Message>
+        creator: mongodb.ObjectID
+    }
+
     export var client:mongodb.MongoClient
     export var db:mongodb.Db
     export var users:mongodb.Collection<UserInfo>
+    export var messages:mongodb.Collection<MessageFeature>
 
     export async function connectToMongo():Promise<mongodb.Db> {
         if ( this.db ) return Promise.resolve(this.db)
@@ -26,6 +39,7 @@ namespace Database {
             this.client = client
             this.db = this.client.db("messageInABottle")
             this.users = this.db.collection('users')
+            this.messages = this.db.collection('messages')
             return this.db
         })
     }
